Various refactorings and cleanups